Basic Clustered Shading
Closes #45, Closes #18
- Added LightAssign render pass
- Added lightassign shader program
- Added LightCluster SSBO on binding 4
- Framebuffer better internal format control
- Basic non-local implementation of Shader Storage Buffers and Blocks
- Better LightType definition
- Culling Meshes for each light type
- Fixed Material null texture crash on use

--- a/IonEngine/IonEngine.vcxproj
+++ b/IonEngine/IonEngine.vcxproj
@@ -233,6 +233,7 @@
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="ShaderMetaInfo.cpp" />
     <ClCompile Include="ShaderPreprocessor.cpp" />
+    <ClCompile Include="ShaderStorageBuffer.cpp" />
     <ClCompile Include="ShadowAtlas.cpp" />
     <ClCompile Include="ShadowCaster.cpp" />
     <ClCompile Include="SpecializedShaderProgram.cpp" />
@@ -309,6 +310,7 @@
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="ShaderMetaInfo.h" />
     <ClInclude Include="ShaderPreprocessor.h" />
+    <ClInclude Include="ShaderStorageBuffer.h" />
     <ClInclude Include="ShadowAtlas.h" />
     <ClInclude Include="ShadowCaster.h" />
     <ClInclude Include="SimpleSet.h" />
