--- a/IonEngine_Test/imgui.ini
+++ b/IonEngine_Test/imgui.ini
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][Camera]
 Pos=334,634
-Size=287,160
+Size=287,370
 Collapsed=0
 
 [Window][Cube]
@@ -29,7 +29,7 @@ Size=285,356
 Collapsed=0
 
 [Window][Sun]
-Pos=320,652
+Pos=284,600
 Size=284,329
 Collapsed=0
 
@@ -54,8 +54,8 @@ Size=288,163
 Collapsed=0
 
 [Window][Console]
-Pos=1364,22
-Size=555,537
+Pos=636,22
+Size=1283,537
 Collapsed=0
 
 [Window][Ray]
@@ -86,5 +86,10 @@ Collapsed=0
 [Window][Light]
 Pos=24,500
 Size=287,335
+Collapsed=0
+
+[Window][RefCube]
+Pos=60,60
+Size=266,77
 Collapsed=0
 
