--- a/IonEngine_Test/IonEngine_Test.vcxproj
+++ b/IonEngine_Test/IonEngine_Test.vcxproj
@@ -301,6 +301,9 @@ exit 0
   <ItemGroup>
     <None Include="res\shaders\depth\fs.glsl" />
     <None Include="res\shaders\depth\vs.glsl" />
+    <None Include="res\shaders\lightassign\fs.glsl" />
+    <None Include="res\shaders\lightassign\gs.glsl" />
+    <None Include="res\shaders\lightassign\vs.glsl" />
     <None Include="res\shaders\lightpass\fs.glsl" />
     <None Include="res\shaders\lightpass\vs.glsl" />
     <None Include="res\shaders\test\fs.glsl">
