--- a/IonEngine_Test/IonEngine_Test.vcxproj.filters
+++ b/IonEngine_Test/IonEngine_Test.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Resource Files\shaders\depth">
       <UniqueIdentifier>{e94bc9aa-44df-4d4f-852e-159c6ec61c86}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\shaders\lightassign">
+      <UniqueIdentifier>{e302a1a5-a0ad-4cb1-a3b9-be5107448d81}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -99,6 +102,15 @@
     </None>
     <None Include="res\shaders\depth\vs.glsl">
       <Filter>Resource Files\shaders\depth</Filter>
+    </None>
+    <None Include="res\shaders\lightassign\fs.glsl">
+      <Filter>Resource Files\shaders\lightassign</Filter>
+    </None>
+    <None Include="res\shaders\lightassign\vs.glsl">
+      <Filter>Resource Files\shaders\lightassign</Filter>
+    </None>
+    <None Include="res\shaders\lightassign\gs.glsl">
+      <Filter>Resource Files\shaders\lightassign</Filter>
     </None>
   </ItemGroup>
 </Project>
