Better OBJ Import
Closes #54
- Added tinyobjloader
- Changed format of normal deferred buffer to RGB16
- Changed MeshImporter to use tinyobjloader
- Updated shader for smooth shading
- Added icosphere_high.obj mesh

--- a/IonEngine/IonEngine.vcxproj.filters
+++ b/IonEngine/IonEngine.vcxproj.filters
@@ -557,5 +557,8 @@
     <ClInclude Include="ComputeShader.h">
       <Filter>Header Files\Engine\Render\Shader</Filter>
     </ClInclude>
+    <ClInclude Include="ext\tiny_obj_loader.h">
+      <Filter>Header Files\External</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
