Sponza model and Very Basic Skybox
Closes #34
- Transform Inspector euler rotation

--- a/IonEngine/IonEngine.vcxproj
+++ b/IonEngine/IonEngine.vcxproj
@@ -238,6 +238,7 @@
     <ClCompile Include="ShaderStorageBuffer.cpp" />
     <ClCompile Include="ShadowAtlas.cpp" />
     <ClCompile Include="ShadowCaster.cpp" />
+    <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="SpecializedShaderProgram.cpp" />
     <ClCompile Include="SphereCollider.cpp" />
     <ClCompile Include="StatsEditor.cpp" />
@@ -319,6 +320,7 @@
     <ClInclude Include="ShadowAtlas.h" />
     <ClInclude Include="ShadowCaster.h" />
     <ClInclude Include="SimpleSet.h" />
+    <ClInclude Include="Skybox.h" />
     <ClInclude Include="SpecializedShaderProgram.h" />
     <ClInclude Include="SphereCollider.h" />
     <ClInclude Include="StatsEditor.h" />
