--- a/IonEngine_Test/imgui.ini
+++ b/IonEngine_Test/imgui.ini
@@ -19,7 +19,7 @@ Size=460,450
 Collapsed=0
 
 [Window][Camera]
-Pos=334,634
+Pos=330,632
 Size=287,370
 Collapsed=0
 
@@ -96,5 +96,15 @@ Collapsed=0
 [Window][Light2]
 Pos=311,500
 Size=301,335
+Collapsed=0
+
+[Window][Map]
+Pos=60,60
+Size=245,54
+Collapsed=0
+
+[Window][Sponza]
+Pos=822,766
+Size=306,255
 Collapsed=0
 
