--- a/IonEngine_Test/IonEngine_Test.vcxproj
+++ b/IonEngine_Test/IonEngine_Test.vcxproj
@@ -304,6 +304,8 @@ exit 0
     <None Include="res\shaders\lightassign\cs.glsl" />
     <None Include="res\shaders\lightpass\fs.glsl" />
     <None Include="res\shaders\lightpass\vs.glsl" />
+    <None Include="res\shaders\procedural_sky\fs.glsl" />
+    <None Include="res\shaders\procedural_sky\vs.glsl" />
     <None Include="res\shaders\test\fs.glsl">
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
