--- a/IonEngine_Test/imgui.ini
+++ b/IonEngine_Test/imgui.ini
@@ -84,7 +84,7 @@ Size=266,174
 Collapsed=0
 
 [Window][Light]
-Pos=24,461
+Pos=24,500
 Size=287,335
 Collapsed=0
 
@@ -106,5 +106,15 @@ Collapsed=0
 [Window][Sponza]
 Pos=822,766
 Size=306,255
+Collapsed=0
+
+[Window][ChildCube]
+Pos=60,60
+Size=266,77
+Collapsed=0
+
+[Window][MirCube]
+Pos=60,60
+Size=266,77
 Collapsed=0
 
