--- a/IonEngine/IonEngine.vcxproj
+++ b/IonEngine/IonEngine.vcxproj
@@ -259,7 +259,18 @@
     <ClCompile Include="ConcaveMeshCollider.cpp" />
     <ClCompile Include="ConsoleWindow.cpp" />
     <ClCompile Include="ConvexMeshCollider.cpp" />
+    <ClCompile Include="Core\Debug.cpp" />
+    <ClCompile Include="Core\EngineCore.cpp" />
+    <ClCompile Include="Core\IonMath.cpp" />
     <ClCompile Include="Debug.cpp" />
+    <ClCompile Include="Display\Window.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Display\WindowModule.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="EditorWindow.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Entity.cpp" />
@@ -333,7 +344,30 @@
     <ClInclude Include="ConcaveMeshCollider.h" />
     <ClInclude Include="ConsoleWindow.h" />
     <ClInclude Include="ConvexMeshCollider.h" />
+    <ClInclude Include="Core\Allocation\AllocUtils.h" />
+    <ClInclude Include="Core\Collections\BulkHollowSet.h" />
+    <ClInclude Include="Core\Collections\BulkSet.h" />
+    <ClInclude Include="Core\Collections\CollectionParams.h" />
+    <ClInclude Include="Core\Collections\SimpleList.h" />
+    <ClInclude Include="Core\Debug.h" />
+    <ClInclude Include="Core\EngineCore.h" />
+    <ClInclude Include="Core\IonMath.h" />
+    <ClInclude Include="Core\Module.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Core\Utils\Enums.h" />
+    <ClInclude Include="Core\Utils\IonTypes.h" />
+    <ClInclude Include="Core\Utils\Strings.h" />
     <ClInclude Include="Debug.h" />
+    <ClInclude Include="Display\Window.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Display\WindowModule.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="EditorWindow.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Entity.h" />
@@ -371,6 +405,10 @@
     <ClInclude Include="PhysicsDebugger.h" />
     <ClInclude Include="PhysicsWorld.h" />
     <ClInclude Include="Random.h" />
+    <ClInclude Include="Rendering\RenderingModule.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="RenderPass.h" />
     <ClInclude Include="Rigidbody.h" />
     <ClInclude Include="SceneEditor.h" />
