Simple ECS System WIP

--- a/IonEngine/IonEngine.vcxproj
+++ b/IonEngine/IonEngine.vcxproj
@@ -189,6 +189,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="World\Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Collections\BulkList.h">
@@ -203,6 +204,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Core\Collections\CappedSparseArray.h" />
     <ClInclude Include="Core\Collections\VirtualBuffer.h">
       <SubType>
       </SubType>
@@ -313,6 +315,7 @@
     <ClInclude Include="Core\Time\Time.h" />
     <ClInclude Include="Core\Time\UpdateModule.h" />
     <ClInclude Include="Core\Time\UpdateTimeline.h" />
+    <ClInclude Include="World\Scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
