--- a/IonEngine/IonEngine.vcxproj
+++ b/IonEngine/IonEngine.vcxproj
@@ -161,6 +161,10 @@
     <ClCompile Include="Core\Time\Time.cpp" />
     <ClCompile Include="Core\Time\UpdateModule.cpp" />
     <ClCompile Include="Core\Time\UpdateTimeline.cpp" />
+    <ClCompile Include="Render\DX11\Buffer.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Render\DX11\Camera.cpp">
       <SubType>
       </SubType>
@@ -186,6 +190,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Render\Vulkan\RenderContext.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Resource\Mesh.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -277,7 +285,15 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Render\DX11\ResourceUtils.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Render\DX11\Shader.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Render\RenderContext.h">
       <SubType>
       </SubType>
     </ClInclude>
